finied weather, scheme, market price pages

--- a/backbone-backend/.env
+++ b/backbone-backend/.env
@@ -6,3 +6,6 @@ PORT = 5000
 
 # A long, random, and secret string for security
 JWT_SECRET = aVeryStrongAndSecretKeyForYourProject123!
+
+# Google Gemini API Key for AI validation
+GEMINI_API_KEY = AIzaSyDVpzz8Kbwk9DOqynFo8T2D5fZITZwX4_Y
